homepage needed some spacing to clear for the post navbar fix

--- a/src/styles/views/_Home.scss
+++ b/src/styles/views/_Home.scss
@@ -21,7 +21,7 @@
                 border: 4px solid $accent-color;
                 border-radius: 120px;
                 @media (max-width: $breakpoint-md) {
-                    margin-top: 10px;
+                    margin-top: 40px;
                     height: 120px;
                 }
             }
@@ -66,7 +66,7 @@
             p {
                 margin: 5px;
                 width: 80%;
-                @media (max-width: $breakpoint-sm) {
+                @media (max-width: $breakpoint-md) {
                     width: 95%;
                     font-size: 0.9em;
                 }
